--- a/app/assets/style/scss/components/_header.scss
+++ b/app/assets/style/scss/components/_header.scss
@@ -86,11 +86,13 @@ header {
 			}
 		}
 
+		/*menu*/
 		&__menu {
 			display: flex;
 			padding-top: 3px;
 
 			.menu__item {
+				cursor: pointer;
 				padding: 0 28px;
 				
 				&:first-child {
@@ -106,7 +108,6 @@ header {
 				[data-type="with-arrow"] {
 					&::before {
 						content: '';
-						display: none;
 						position: absolute;
 						left: calc(100% + 10px);
 						top: calc(50% + 1px);
@@ -129,11 +130,19 @@ header {
 					color: var(--cl-text-hover);
 				}
 
+				.menu__item-link::after {
+					content: '';
+					position: absolute;
+					left: 100%;
+					height: 30px;
+					width: 50px;
+				}
+
 				.menu__item-link::before {
 					content: "";
 					position: absolute;
 					left: -15px;
-					right: -35px;
+					right: -80px;
 					top: 100%;
 					height: 30px;
 				}
