index-page: done:

--- a/app/assets/style/scss/_fonts.scss
+++ b/app/assets/style/scss/_fonts.scss
@@ -21,5 +21,6 @@ FONT FAMILY
 @include font-face('SFUIDisplay', '../../fonts/SFUIDisplay-Medium', 500);
 @include font-face('SFUIDisplay', '../../fonts/SFUIDisplay-Semibold', 600);
 @include font-face('SFUIDisplay', '../../fonts/SFUIDisplay-Bold', 700);
+@include font-face('Malgun Gothic', '../../fonts/MalgunGothic-Semilight', 300);
 @include font-face('mr_Inverkrug', '../../fonts/mr_Inverkrug-Inverkrug', 'inverkrug');
 
