--- a/app/assets/style/scss/base/_variables.scss
+++ b/app/assets/style/scss/base/_variables.scss
@@ -5,6 +5,7 @@ VARIABLES
 :root {
 	/*site font*/
 	--fm-1: "SFUIDisplay", sans-serif;
+	--fm-2: "Malgun Gothic", sans-serif;
 
 	/*font weight*/
 	--fm-1_fw-s: 100;
