--- a/app/assets/style/scss/components/_blocks.scss
+++ b/app/assets/style/scss/components/_blocks.scss
@@ -8,6 +8,15 @@ COMMON BLOCKS
 	width: 367px;
 }
 
+/*dropdown*/
+[data-dropdown="list"] {
+	height: 0;
+	min-height: 0;
+	overflow: hidden;
+	transition-property: min-height, height;
+	transition-duration: $duration;
+}
+
 /*hemburger*/
 .hamburger {
 	$bg-line: var(--border-color-lig);
@@ -289,11 +298,27 @@ COMMON BLOCKS
 	width: 105px;
 	height: 614px;
 	
+	@include desctop-mid {
+		width: 90px;
+		height: 493px;
+	}
 }
 
 .spot-bg {
 	width: 2113px;
 	height: 1561px;
+}
+
+#location {
+	height: 613px;
+
+	@include desctop-min {
+		height: 450px;
+	}
+
+	@include mobile {
+		height: 380px;
+	}
 }
 
 /*b-input*/
@@ -314,9 +339,12 @@ COMMON BLOCKS
 		padding: var(--pd);
 		height: var(--height);
 		width: 100%;
+		line-height: 1;
 		font-size: var(--fs);
+		background-color: #fff;
 		border: var(--border);
 		border-radius: calc(var(--height) / 2);
+		text-overflow: ellipsis;
 	}
 
 	input::placeholder,
@@ -329,6 +357,8 @@ COMMON BLOCKS
 	&-file {
 		cursor: pointer;
 		position: relative;
+		white-space: nowrap;
+		overflow: hidden;
 
 		&::before {
 			content: '';
@@ -377,7 +407,7 @@ COMMON BLOCKS
 
 		&-img {
 			display: block;
-			max-height: 375px;
+			max-height: 445px;
 			max-width: 454px;
 
 			img {
@@ -385,13 +415,13 @@ COMMON BLOCKS
 			}
 
 			#{$this}--paint & {
-				max-width: 386px;
-				max-height: 374px;
+				max-width: 445px;
+				max-height: 445px;
 			}
 
 			#{$this}--photo & {
-				max-width: 454px;
-				max-height: 358px;
+				max-width: 545px;
+				max-height: 430px;
 			}
 		}
 
@@ -415,12 +445,9 @@ COMMON BLOCKS
 			$this: &;
 	
 			&-img {
-				#{$this}--paint & {
-					max-width: 346px;
-				}
-	
+				#{$this}--paint &,
 				#{$this}--photo & {
-					max-width: 414px;
+					max-width: 370px;
 				}
 			}
 		}
@@ -445,12 +472,9 @@ COMMON BLOCKS
 		&__item {
 			$this: &;
 			&-img {
-				#{$this}--paint & {
-					max-width: 253px;
-				}
-	
+				#{$this}--paint &,
 				#{$this}--photo & {
-					max-width: 281px;
+					max-width: 280px;
 				}
 			}
 		}
@@ -542,16 +566,18 @@ COMMON BLOCKS
 		position: relative;
 		display: inline-flex;
 		min-width: 205px;
-		max-width: 265px;
+		max-width: 235px;
 		align-items: center;
-		font-size: 18px;
-		line-height: (20/18);
+		font-weight: 300;
+		font-size: 16px;
+		line-height: (18/16);
+		font-family: var(--fm-2);
 		text-align: center;
 		
 		&-img {
 			position: relative;
-			margin-bottom: 35px;
-			height: 131px;
+			margin-bottom: 30px;
+			height: 109px;
 			width: 150px;
 			background-repeat: no-repeat;
 			background-size: contain;
@@ -560,17 +586,17 @@ COMMON BLOCKS
 			&::before {
 				content: "";
 				position: absolute;
-				right: calc(100% + 50px);
+				right: calc(100% + 40px);
 				top: 50%;
-				width: 57px;
-				height: 45px;
+				width: 47px;
+				height: 37px;
 				background: url(./../../img/components/order-process/arrow.png) no-repeat;
 				background-size: contain;
 				transform: translateY(-50%);
 			}
 
 			.order-process__item:nth-of-type(1) & {
-				width: 127px;
+				width: 104px;
 
 				&::before {
 					display: none;
@@ -578,21 +604,41 @@ COMMON BLOCKS
 			}
 
 			.order-process__item:nth-of-type(2) & {
-				width: 125px;
+				width: 103px;
 			}
 
 			.order-process__item:nth-of-type(3) & {
-				width: 148px;
+				width: 122px;
 			}
 
 			.order-process__item:nth-of-type(4) & {
-				width: 126px;
+				width: 109px;
 			}
 
 			.order-process__item:nth-of-type(5) & {
-				width: 112px;
+				width: 92px;
+			}
+			.order-process__item:nth-of-type(6) & {
+				width: 105px;
 			}
 		}
+	}
+
+	&__telegram,
+	&__viber {
+		display: inline-block;
+		margin-bottom: -3px;
+		width: 16px;
+		height: 16px;
+		background-image: url(./../../img/components/order-process/cont_sprites.png);
+	}
+
+	&__telegram {
+		background-position: -10px -10px;
+	}
+
+	&__viber {
+		background-position: -46px -10px;
 	}
 
 	@include desctop-mid {
@@ -600,10 +646,7 @@ COMMON BLOCKS
 			margin-bottom: 90px;
 		}
 
-		&__item	{
-			max-width: 215px;
-			font-size: 17px;
-			
+		&__item	{			
 			&-img {
 				&::before {
 					right: calc(100% + 30px);
@@ -615,7 +658,14 @@ COMMON BLOCKS
 	}
 
 	@include desctop-min {
-		&__item	{			
+		&__list {
+			flex-wrap: wrap;
+			justify-content: center;
+			margin: 0 0 -35px -30px;
+		}
+
+		&__item	{	
+			margin: 0 0 35px 30px;		
 			&-img {
 				&::before {
 					display: none;
@@ -625,19 +675,8 @@ COMMON BLOCKS
 	}
 
 	@include table {
-		&__list {
-			flex-wrap: wrap;
-			justify-content: center;
-			margin: 0 0 -25px -30px;
-		}
-
-		&__item	{
-			margin: 0 0 25px 30px;
-			max-width: 265px;		
+		&__item	{	
 			width: calc(50% - 30px);
-			font-size: 18px;
-
-
 		}
 	}
 
@@ -848,8 +887,7 @@ COMMON BLOCKS
 /*consult*/
 .consult {
 	padding: 99px 0 110px;
-	background: url(./../../img/components/const/bg-left.png) no-repeat left bottom,
-			    url(./../../img/components/const/bg-right.png) no-repeat right top;
+	background: url(./../../img/components/consult/bg-right.png) no-repeat right top;
 
 	$heightEl: 57px;
 	$widthEl: 29.64%;
@@ -937,7 +975,8 @@ COMMON BLOCKS
 
 	&__list {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(3, auto);
+		justify-content: space-between;
 		column-gap: 30px;
 		row-gap: 85px;
 	}
@@ -1035,13 +1074,19 @@ COMMON BLOCKS
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-		justify-content: center;
+		justify-content: space-between;
 		margin: 0 0 -30px -70px;
 	}
 
 	&__img {
 		display: inline-block;
 		margin: 0 0 30px 70px;
+	}
+
+	@include desctop-mid {
+		&__list {
+			justify-content: center;
+		}
 	}
 
 	@include mobile {
@@ -1051,7 +1096,6 @@ COMMON BLOCKS
 
 		&__list {
 			margin: 0;
-			padding: 0 40px;
 		}
 
 		&__img {
@@ -1206,7 +1250,7 @@ COMMON BLOCKS
 
 /*info*/
 .info {
-	padding: 90px 0 75px;
+	padding: 90px 0 70px;
 
 	&__title {
 		margin-bottom: 45px;
@@ -1228,6 +1272,7 @@ COMMON BLOCKS
 		}
 	}
 }
+
 /*application*/
 .application {
 	display: flex;
